# graphrag-archaeology

./: .env.example  .gitignore  BlogPost.md  PLAN.md  README.md  cleanup_prompt.txt  extracted_tables.json  main.py  pyproject.toml
.claude/agent-memory/pdf-extract-cleaner/: MEMORY.md  project_digitized_book_ocr.md  project_powerpoint_pdf_extraction.md
.claude/agents/: pdf-extract-cleaner.md  software-engineer.md
.claude/commands/: agent-status.md
data/: The-Archaeology-of-Virginias-First-Peoples.md  historyofvaleyo00inkerc.txt  historyofvalleyo00inkerc_lcp.epub
data/entities/: The-Archaeology-of-Virginias-First-Peoples.json
data/md/: The-Archaeology-of-Virginias-First-Peoples.md  historyofvalleyo00inkerc.md
memory/: feedback_llm_as_guide.md  project_debitage_classifier.md
research/: historical-document-rag-landscape.md  ml-cheat-sheet.md
shacl/: OpenArchaeo-Shapes.ttl  virginia-archaeology.shacl.ttl
src/: api.py  config.py  schema.py
src/extract/: chunker.py  llm_cleanup.py  ner.py  ocr_cleanup.py  pdf_extract.py  pdf_extract_table.py  pdf_extract_tables_llm.py  pdf_extract_tables_pdfplumber.py  pipeline.py  relations.py  resolve.py  sectioning.py
src/graph/: embed.py  load.py  validate.py
src/rag/: graph_rag.py  naive.py  prompt.py
src/simplekg_example/: neo4j_kg_pipeline.py  query_kg.py
ui/: architecture.html  index.html
