[project]
name = "archaeology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "einops>=0.8.2",
    "gliner2>=1.2.4",
    "graphlint",
    "kreuzberg>=4.6.3",
    "neo4j>=6.1.0",
    "neo4j-graphrag>=1.14.0",
    "ollama>=0.6.1",
    "openai>=2.29.0",
    "pdfplumber>=0.11.9",
    "pyright>=1.1.408",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
]

[tool.uv.sources]
graphlint = { path = "../../graphlint", editable = true }

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
